[package]
name = "command_examples"
version = "0.1.0"
authors = ["Blas Rodriguez Irizar <rodrigblas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
clap = "2.33.0"
fuzzy-matcher = "0.3.1"
wasm-bindgen = "0.2.58"
cfg-if = "0.1.10"
regex="1"