[package]
name = "cmdex"
version = "0.1.8"
authors = ["Blas Rodriguez Irizar <rodrigblas@gmail.com>"]
edition = "2018"
description = """
Search for those commands you don't remember!
"""
license = "MIT"
repository = "https://github.com/blasrodri/cmdex"
homepage = "https://github.com/blasrodri/cmdex"
documentation = "https://docs.rs/cmdex/0.1.8/cmdex/"


exclude = ["new_command/*.sh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
clap = "2.33.0"
fuzzy-matcher = "0.3.1"
